Added quick-save and quick-load (still testing) Added xml verification Updated exe

--- a/SaveOrganizer.csproj
+++ b/SaveOrganizer.csproj
@@ -104,6 +104,7 @@
     <Compile Include="FormToastResponse.Designer.cs">
       <DependentUpon>FormToastResponse.cs</DependentUpon>
     </Compile>
+    <Compile Include="GameHooker.cs" />
     <Compile Include="Hotkeys.cs" />
     <Compile Include="KeyHooker.cs" />
     <Compile Include="Program.cs" />
@@ -163,6 +164,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="TextTemplate.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
