Added lua capabilities and a toggle noclip mode

--- a/SaveOrganizer.csproj
+++ b/SaveOrganizer.csproj
@@ -54,6 +54,7 @@
     <ApplicationIcon>TextTemplate.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -68,6 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActionCenter.cs" />
+    <Compile Include="ASM.cs" />
     <Compile Include="Configuration.cs" />
     <Compile Include="FormHelp.cs">
       <SubType>Form</SubType>
@@ -167,18 +169,21 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Resources\FuncLocs.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="TextTemplate.ico" />
     <Content Include="Version.txt" />
   </ItemGroup>
   <ItemGroup>
     <PublishFile Include="Version.txt">
       <Visible>False</Visible>
+      <PublishState>Exclude</PublishState>
+      <IncludeHash>True</IncludeHash>
       <Group>
       </Group>
       <TargetPath>
       </TargetPath>
-      <PublishState>Exclude</PublishState>
-      <IncludeHash>True</IncludeHash>
       <FileType>File</FileType>
     </PublishFile>
   </ItemGroup>
