--- a/SaveOrganizer.csproj
+++ b/SaveOrganizer.csproj
@@ -107,6 +107,7 @@
     <Compile Include="FormToastResponse.Designer.cs">
       <DependentUpon>FormToastResponse.cs</DependentUpon>
     </Compile>
+    <Compile Include="FuncLocs.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="GameHooker.cs" />
     <Compile Include="GithubUpdater.cs" />
@@ -169,9 +170,6 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Resources\FuncLocs.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
     <Content Include="TextTemplate.ico" />
     <Content Include="Version.txt" />
   </ItemGroup>
