--- a/SpeedrunAssistant.csproj
+++ b/SpeedrunAssistant.csproj
@@ -116,6 +116,12 @@
     <Compile Include="LastOpened.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="FormUpdatePrompt.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormUpdatePrompt.Designer.cs">
+      <DependentUpon>FormUpdatePrompt.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="FormHelp.resx">
       <DependentUpon>FormHelp.cs</DependentUpon>
     </EmbeddedResource>
@@ -144,6 +150,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="FormUpdatePrompt.resx">
+      <DependentUpon>FormUpdatePrompt.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
